[project]
name = "testing-fancy-backprop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.2",
    "jax[cuda12]>=0.8.0",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "tqdm>=4.67.1",
]
